pie chart and recycleview added

--- a/app/src/main/res/layout/item_creative_content_nature.xml
+++ b/app/src/main/res/layout/item_creative_content_nature.xml
@@ -16,14 +16,14 @@
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/pieChart"
-            android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_width="353dp"
+            android:layout_height="218dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/state_name">
 
         </com.github.mikephil.charting.charts.PieChart>
 
@@ -31,11 +31,13 @@
             android:id="@+id/linearLayout3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
             android:orientation="horizontal"
             android:weightSum="2"
-            app:layout_constraintEnd_toEndOf="@+id/pieChart"
-            app:layout_constraintStart_toStartOf="@+id/pieChart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pieChart">
 
             <TextView
@@ -49,6 +51,7 @@
                 android:textStyle="bold"></TextView>
 
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="5dp"
@@ -72,6 +75,22 @@
             app:layout_constraintEnd_toEndOf="@+id/pieChart"
             app:layout_constraintStart_toStartOf="@+id/pieChart"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+
+        <TextView
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:id="@+id/state_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
