--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,10 +14,13 @@
     <color name="status_color">#F0326F</color>
     <color name="bottom_color">#9C36B5</color>
     <color name="white">#fff</color>
-    <color name="dark_red">#FF0000</color>
-    <color name="dark_blue">#225AEE</color>
-    <color name="dark_green">#1F9121</color>
-    <color name="dark_grey">#949C94</color>
+
+    <color name="dark_red">#ED1515</color>
+    <color name="dark_blue">#4A90E2</color>
+    <color name="dark_green">#2CA086</color>
+    <color name="dark_grey">#9B9B9B</color>
+
+
     <color name="background">#001341</color>
     <color name="new_red">#C56961</color>
 
